still learning phase

--- a/Hello-World/index.html
+++ b/Hello-World/index.html
@@ -14,8 +14,7 @@
     <meta content="article" property="og:type">
   
   
-    <meta content="# Write an awesome description for your new site here. You can edit this # line in _config.yml. It will appear in your document head meta (for # Google search results) and in your feed.xml site description. I will be writing about my projects.
-" property="og:description">
+    <meta content="" property="og:description">
   
   
     <meta content="https://saminehbagheri.github.io/Hello-World/" property="og:url">
@@ -48,8 +47,7 @@
     <meta name="twitter:url" content="https://saminehbagheri.github.io/Hello-World/">
   
   
-    <meta name="twitter:description" content="# Write an awesome description for your new site here. You can edit this # line in _config.yml. It will appear in your document head meta (for # Google search results) and in your feed.xml site description. I will be writing about my projects.
-">
+    <meta name="twitter:description" content="">
   
   
     <meta name="twitter:image:src" content="https://saminehbagheri.github.io/assets/img/flower1.jpg">
