still learning phase

--- a/Hello-World/index.html
+++ b/Hello-World/index.html
@@ -136,7 +136,7 @@
         <h1 class="page-title">Hello World</h1>
         <div class="page-date"><span>2018, Apr 26&nbsp;&nbsp;&nbsp;&nbsp;</span></div>
       </header>
-      <p>This website is under construction. It wille be updated soon</p>
+      <p>This website is under construction. It will be updated soon.</p>
 
       <div class="page-footer">
         <div class="page-share">
