--- a/Hello-World/index.html
+++ b/Hello-World/index.html
@@ -14,7 +14,7 @@
     <meta content="article" property="og:type">
   
   
-    <meta content="" property="og:description">
+    <meta content="I will be writing about my projects and things which I am truely interested in this blog." property="og:description">
   
   
     <meta content="https://saminehbagheri.github.io/Hello-World/" property="og:url">
@@ -47,7 +47,7 @@
     <meta name="twitter:url" content="https://saminehbagheri.github.io/Hello-World/">
   
   
-    <meta name="twitter:description" content="">
+    <meta name="twitter:description" content="I will be writing about my projects and things which I am truely interested in this blog.">
   
   
     <meta name="twitter:image:src" content="https://saminehbagheri.github.io/assets/img/flower1.jpg">
