second try: changing the description

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta content="website" property="og:type">
   
   
-    <meta content="I will be writing about my projects and things which I am truely interested in this blog." property="og:description">
+    <meta content="" property="og:description">
   
   
     <meta content="https://saminehbagheri.github.io/" property="og:url">
@@ -36,7 +36,7 @@
     <meta name="twitter:url" content="https://saminehbagheri.github.io/">
   
   
-    <meta name="twitter:description" content="I will be writing about my projects and things which I am truely interested in this blog.">
+    <meta name="twitter:description" content="">
   
   
     <meta name="twitter:image:src" content="https://saminehbagheri.github.io/assets/img/samineh.jpg">
