changing the description

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta content="website" property="og:type">
   
   
-    <meta content="" property="og:description">
+    <meta content="I will be writing about my projects and other things which I am truely interested in this blog." property="og:description">
   
   
-    <meta content="https://saminehbagheri.github.io/" property="og:url">
+    <meta content="http://139.6.66.22:4000/" property="og:url">
   
   
   
-    <meta content="https://saminehbagheri.github.io/assets/img/samineh.jpg" property="og:image">
+    <meta content="http://139.6.66.22:4000/assets/img/samineh.jpg" property="og:image">
   
   
   
@@ -33,13 +33,13 @@
     <meta name="twitter:title" content="Hello, world! I'm Samineh Bagheri">
   
   
-    <meta name="twitter:url" content="https://saminehbagheri.github.io/">
+    <meta name="twitter:url" content="http://139.6.66.22:4000/">
   
   
-    <meta name="twitter:description" content="">
+    <meta name="twitter:description" content="I will be writing about my projects and other things which I am truely interested in this blog.">
   
   
-    <meta name="twitter:image:src" content="https://saminehbagheri.github.io/assets/img/samineh.jpg">
+    <meta name="twitter:image:src" content="http://139.6.66.22:4000/assets/img/samineh.jpg">
   
 
 	<meta name="description" content="">
