--- a/recommender-systems/index.html
+++ b/recommender-systems/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>A Simple Recommender System - Hello, world! I'm Samineh Bagheri</title>
+	<title>A Simple Recommender System in R - Hello, world! I'm Samineh Bagheri</title>
 
   <!-- Edit site and author settings in `_config.yml` to make the social details your own -->
 
     <meta content="Hello, world! I'm Samineh Bagheri" property="og:site_name">
   
-    <meta content="A Simple Recommender System" property="og:title">
+    <meta content="A Simple Recommender System in R" property="og:title">
   
   
     <meta content="article" property="og:type">
@@ -43,7 +43,7 @@
     <meta name="twitter:site" content="@">
     <meta name="twitter:creator" content="@false">
   
-    <meta name="twitter:title" content="A Simple Recommender System">
+    <meta name="twitter:title" content="A Simple Recommender System in R">
   
   
     <meta name="twitter:url" content="http://139.6.66.22:4000/recommender-systems/">
@@ -133,7 +133,7 @@
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
-      <p>2018 &copy; Samineh Bagheri</p>
+      <p>2019 &copy; Samineh Bagheri</p>
     </div>
   </footer> <!-- End Footer -->
 </aside> <!-- End Sidebar -->
@@ -142,12 +142,12 @@
   <div class="page-content">
     
     <div class="page-cover-image">
-      <img class="page-image" src=/assets/img/minion.jpg alt="A Simple Recommender System">
+      <img class="page-image" src=/assets/img/minion.jpg alt="A Simple Recommender System in R">
     </div> <!-- End Page Cover Image -->
     
     <div class="wrap-content">
       <header class="header-page">
-        <h1 class="page-title">A Simple Recommender System</h1>
+        <h1 class="page-title">A Simple Recommender System in R</h1>
         <div class="page-date"><span>2018, Apr 27&nbsp;&nbsp;&nbsp;&nbsp;</span></div>
       </header>
       <h1 id="what-is-a-recommender-system">What is a Recommender System?</h1>
@@ -556,7 +556,7 @@ Programming a Simple Recommender System
 
       <div class="page-footer">
         <div class="page-share">
-          <a href="https://twitter.com/intent/tweet?text=A Simple Recommender System&url=http://139.6.66.22:4000/recommender-systems/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
+          <a href="https://twitter.com/intent/tweet?text=A Simple Recommender System in R&url=http://139.6.66.22:4000/recommender-systems/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
           <a href="https://facebook.com/sharer.php?u=http://139.6.66.22:4000/recommender-systems/" title="Share on Facebook" rel="nofollow" target="_blank">Facebook</a>
           <a href="https://plus.google.com/share?url=http://139.6.66.22:4000/recommender-systems/" title="Share on Google+" rel="nofollow" target="_blank">Google+</a>
         </div>
